Added title case for word 'European Union'

--- a/latex/CEUR/bibtex/bib/imrolland.bib
+++ b/latex/CEUR/bibtex/bib/imrolland.bib
@@ -169,7 +169,7 @@ doi  ="10.1039/C9SC01992H"
 
 % article gives a summary of an EU AI regulation (a regulation which would entitle a user to request an explanation for an algorithmic decision which affects them)
 @article{Goodman_Flaxman_2017, 
-title={European Union Regulations on Algorithmic Decision-Making and a “Right to Explanation”}, 
+title={European {U}nion Regulations on Algorithmic Decision-Making and a “Right to Explanation”}, 
 volume={38}, 
 DOI={10.1609/aimag.v38i3.2741},
 number={3}, 
