--- a/latex/CEUR/bibtex/bib/imrolland.bib
+++ b/latex/CEUR/bibtex/bib/imrolland.bib
@@ -1,4 +1,4 @@
-@inproceedings{Zhao2020,
+@inproceedings{ZhaoXujiang2020,
  author = {Zhao, Xujiang and Chen, Feng and Hu, Shu and Cho, Jin-Hee},
   title = {Uncertainty Aware Semi-Supervised Learning on Graph Data},
   booktitle = {Advances Neural Inf. Process. Syst.},
@@ -8,7 +8,7 @@
   pages         = {12827--12836},
 }
 
-@book{DBLP:books/sp/Josang16,
+@book{Josang2016,
   author    = {Audun J{\o}sang},
   title     = {Subjective Logic - {A} Formalism for Reasoning Under Uncertainty},
   series    = {Artificial Intelligence: Foundations, Theory, and Algorithms},
@@ -21,7 +21,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@INPROCEEDINGS{8455454,  
+@INPROCEEDINGS{Josan2018,  
   author={Josang, Audun and Cho, Jin-Hee and Chen, Feng},  
   booktitle={2018 21st Int. Conf. Inf. Fusion},   
   title={Uncertainty Characteristics of Subjective Opinions},   
@@ -33,7 +33,7 @@
   year = {2018}
 }
 
-@inproceedings{NIPS2017_2650d608,
+@inproceedings{Kendall2017,
  author = {Kendall, Alex and Gal, Yarin},
  booktitle = {Advances in Neural Inf. Process. Syst.},
  title = {What Uncertainties Do We Need in {B}ayesian Deep Learning for Computer Vision?},
@@ -45,7 +45,7 @@
 }
 
 
-@InProceedings{pmlr_v80_depeweg18a,
+@InProceedings{Depeweg2018,
   title = 	 {Decomposition of Uncertainty in {B}ayesian Deep Learning for Efficient and Risk-sensitive Learning},
   author =       {Depeweg, Stefan and Hernandez-Lobato, Jose-Miguel and Doshi-Velez, Finale and Udluft, Steffen},
   booktitle = 	 {Proc. 35th Int. Conf. Mach. Learn.},
@@ -58,7 +58,7 @@
 }
 
 
-@InProceedings{pmlr_v48_gal16, 
+@InProceedings{Gal2016, 
   title = {Dropout as a {B}ayesian Approximation: Representing Model Uncertainty in Deep Learning}, 
   author = {Gal, Yarin and Ghahramani, Zoubin}, 
   booktitle = {Proc. 33rd Int. Conf. Mach. Learn.},
@@ -69,7 +69,7 @@
   month = {20--22 Jun.}
 }
 
-@inproceedings{KipfW17,
+@inproceedings{Kipf2017,
   author    = {Thomas N. Kipf and Max Welling},
   address = {Toulon, France},
   month = {24--26 April},
@@ -78,7 +78,7 @@
   year      = {2017}
 }
 
-@inproceedings{huang2021combining,
+@inproceedings{HuangQian2019,
   title={Combining Label Propagation and Simple Models out-performs Graph Neural Networks},
   author={Qian Huang and Horace He and Abhay Singh and Ser-Nam Lim and Austin Benson},
   booktitle={9th Int. Conf. Learn. Representations},
@@ -93,7 +93,7 @@
   CTLnames_show_etal       = "6" 
 }
 
-@misc{tensorflow2015_whitepaper,
+@misc{Abadi2015,
 title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
 url={https://www.tensorflow.org/},
 note={{S}oftware available from tensorflow.org},
@@ -144,7 +144,7 @@ author={
   year={2015},
 }
 
-@inproceedings{NIPS2017_9ef2ed4b,
+@inproceedings{Lakshminarayanan2017,
  author = {Lakshminarayanan, Balaji and Pritzel, Alexander and Blundell, Charles},
  booktitle = {Advances in Neural Inf. Process. Syst.},
  title = {Simple and Scalable Predictive Uncertainty Estimation using Deep Ensembles},
@@ -155,7 +155,7 @@ author={
  pages = {6402--6413}
 }
 
-@Article{C9SC01992H,
+@Article{Ryu2019,
 author ="Ryu, Seongok and Kwon, Yongchan and Kim, Woo Youn",
 title  ="A {B}ayesian graph convolutional network for reliable prediction of molecular properties with uncertainty quantification",
 journal  ="Chemistry Sci.",
@@ -168,7 +168,7 @@ doi  ="10.1039/C9SC01992H"
 }
 
 % article gives a summary of an EU AI regulation (a regulation which would entitle a user to request an explanation for an algorithmic decision which affects them)
-@article{Goodman_Flaxman_2017, 
+@article{Goodman2017, 
 title={European {U}nion Regulations on Algorithmic Decision-Making and a “Right to Explanation”}, 
 volume={38}, 
 DOI={10.1609/aimag.v38i3.2741},
@@ -180,7 +180,7 @@ month={Oct.},
 pages={50-57} 
 }
 
-@article{lecun2015deeplearning,
+@article{LeCun2015,
   title={Deep learning},
   author={LeCun, Yann and Bengio, Yoshua and Hinton, Geoffrey},
   journal={Nature},
@@ -191,7 +191,7 @@ pages={50-57}
   publisher={Nature Publishing Group}
 }
 
-@article{zhang2016deep,
+@article{LiangpeiZhang2016,
   title={Deep learning for remote sensing data: A technical tutorial on the state of the art},
   author={Zhang, Liangpei and Zhang, Lefei and Du, Bo},
   journal={{IEEE} Geosci. Remote Sens. Mag.},
@@ -202,7 +202,7 @@ pages={50-57}
   publisher={IEEE}
 }
 
-@InProceedings{pmlr_v70_guo17a, 
+@InProceedings{ChuanGuo2017, 
 title = {On Calibration of Modern Neural Networks}, 
 author = {Chuan Guo and Geoff Pleiss and Yu Sun and Kilian Q. Weinberger}, 
 booktitle = {Proc. 34th Int. Conf. Mach. Learn.}, 
