--- a/latex/CEUR/paper.tex
+++ b/latex/CEUR/paper.tex
@@ -80,8 +80,8 @@ twocolumn,
 \maketitle
 
 \section{Introduction}
-The capability of algorithms to provide accurate measures of confidence and uncertainty is important if they are to be adopted in real-world scenarios where the stakes can be high \cite{Goodman_Flaxman_2017}.
-Although deep learning methods have provided new state of the art performance on many computer vision tasks \cite{lecun2015deeplearning}, and in many remote sensing tasks \cite{zhang2016deep}, they are often criticised for their lack of explainability \cite{pmlr_v70_guo17a} acting like a black box.
+The capability of algorithms to provide accurate measures of confidence and uncertainty is important if they are to be adopted in real-world scenarios where the stakes can be high \cite{Goodman2017}.
+Although deep learning methods have provided new state of the art performance on many computer vision tasks \cite{LeCun2015}, and in many remote sensing tasks \cite{LiangpeiZhang2016}, they are often criticised for their lack of explainability \cite{ChuanGuo2017} acting like a black box.
 Prediction transparency could be improved if models were able express when results can be given with confidence.
 
 The remainder of this paper is organised as follows: Section \ref{sec::related_work} contains a summary of related research into uncertainty-aware remote sensing classification methods, Section \ref{sec::unc_framework} describes the uncertainty framework adopted in the methods presented, Section \ref{sec::networks} details the construction of the graph-based neural networks used, Section \ref{sec::results} presents an analysis of results and Section \ref{sec::conclusion} summarises and draws conclusions as well as suggests areas for future work.
@@ -95,7 +95,7 @@ TBW.
 
 \subsection{Subjective Logic}
 In order to understand the mapping between Dirichlet distributions and uncertainty estimates, it is first necessary to describe the Subjective Logic (SL) framework.
-The uncertainty reasoning described by SL takes an evidence-based approach to decision making \cite{DBLP:books/sp/Josang16}.
+The uncertainty reasoning described by SL takes an evidence-based approach to decision making \cite{Josang2016}.
 Expressing an opinion using measured quantities of belief allows the distinction to be made between uncertainty due to a lack of evidence (vacuity) or uncertainty due to the presence of conflicting evidence (dissonance).
 A multinomial opinion, $\omega$, can be expressed as $\omega=\left(\mathbf{b}, u, \mathbf{a}\right)$, where $\mathbf{b}$ is a belief mass vector, the scalar $u$ is the uncertainty mass and $\mathbf{a}$ is the base rate vector.
 For an output, $\mathbf{y}$, of dimension K
@@ -137,7 +137,7 @@ respectively, where $S$ refers to the Dirichlet strength, then by equating the p
 \end{equation}
 which completes the mapping from Dirichlet distribution to SL opinion.
 \subsection{Uncertainty measures}
-From the definitions of the evidential uncertainties presented in \cite{8455454}, the measures of vacuity and dissonance have been adopted.
+From the definitions of the evidential uncertainties presented in \cite{Josang2018}, the measures of vacuity and dissonance have been adopted.
 The measure of vacuity uncertainty is simply given by the uncertainty mass, i.e.
 \begin{equation}
     vac(\omega)\equiv u = \frac{K}{S},
@@ -155,12 +155,12 @@ where $\textrm{Bal}()$ is a function which gives the relative balance between tw
 
 In order assess the relative ability of evidential uncertainties to express different types of doubt, three commonly used probabilistic measures of uncertainty (aleatoric, epistemic and entropy) are computed to provide comparisons.
 For a Bayesian model with inputs, outputs and parameters denoted $x$, $y$ and $\boldsymbol{\theta}$ respectively, the posterior which will be approximated is $p(\boldsymbol{\theta}\vert\mathcal{D})$, where $\mathcal{D}$ is the observed dataset.
-The total entropy, made up of both aleatoric and epistemic uncertainty \cite{pmlr_v80_depeweg18a} is given by
+The total entropy, made up of both aleatoric and epistemic uncertainty \cite{Depeweg2018} is given by
 \begin{equation}
     \mathcal{H}\left(\mathbb{E}_{p(\boldsymbol{\theta}\vert \mathcal{D})}\left[p(y\vert x;\boldsymbol{\theta}\right]\right),
 \end{equation}
 where $\mathcal{H}()$ computes the differential entropy of a distribution.
-Aleatoric uncertainty, which accounts for noise inherent to the data observations and cannot be reduced with extra samples \cite{NIPS2017_2650d608}, is given by
+Aleatoric uncertainty, which accounts for noise inherent to the data observations and cannot be reduced with extra samples \cite{Kendall2017}, is given by
 \begin{equation}
     \mathbb{E}_{p\left(\boldsymbol{\theta}\vert \mathcal{D}\right)}\left[\mathcal{H}(p(y\vert x; \boldsymbol{\theta}))\right].
 \end{equation}
@@ -169,7 +169,7 @@ The epistemic uncertainty, therefore, is given by the difference between these t
     \mathcal{H}\left(\mathbb{E}_{p(\boldsymbol{\theta}\vert \mathcal{D})}\left[p(y\vert x;\boldsymbol{\theta}\right]\right)-\mathbb{E}_{p\left(\boldsymbol{\theta}\vert \mathcal{D}\right)}\left[\mathcal{H}(p(y\vert x; \boldsymbol{\theta}))\right].
 \label{eq::epistemic}
 \end{equation}
-In order to compute the above expressions for aleatoric and epistemic uncertainty, the posterior distribution over models is approximated by samples obtained using dropout inference \cite{pmlr_v48_gal16} as is described in Section \ref{sec::dropout_bayesian}.
+In order to compute the above expressions for aleatoric and epistemic uncertainty, the posterior distribution over models is approximated by samples obtained using dropout inference \cite{Gal2016} as is described in Section \ref{sec::dropout_bayesian}.
 
 \section{Networks}
 \label{sec::networks}
@@ -177,7 +177,7 @@ In order to compute the above expressions for aleatoric and epistemic uncertaint
 The problem involves a graph with $N$ nodes described by an adjacency matrix $\mathbf{A}\in\mathbb{R}^{N\times N}$ and node features $\mathbf{X}\in\mathbb{R}^{N\times C}$, where $C$ denotes the number of channels in the input which describes each node.
 The graph's degree matrix, $\mathbf{D}\in\mathbb{R}^{N\times N}$, is a diagonal matrix with elements given by $\mathbf{D}_{ii}=\sum_j\mathbf{A}_{ij} $.
 For brevity, the tilde operator is used to represent the inclusion of self-connection edges in the graph, i.e. $\tilde{\mathbf{A}}=\mathbf{A}+\mathbf{I}$ and $\tilde{\mathbf{D}}=\mathbf{D}+\mathbf{I}$.
-Using the first-order approximation to spectral graph convolution derived by \cite{KipfW17}, the graph convolutional layer is given by
+Using the first-order approximation to spectral graph convolution derived by \cite{Kipf2017}, the graph convolutional layer is given by
 \begin{equation}
     \mathbf{Z}^{(l+1)}=\sigma\left(\tilde{\mathbf{D}}^{-\frac{1}{2}}\tilde{\mathbf{A}}\tilde{\mathbf{D}}^{-\frac{1}{2}}\mathbf{Z}^{(l)}\boldsymbol{W}^{(l)}\right),
 \label{eq::gcn_layer}
@@ -201,8 +201,8 @@ where $i\in\mathbb{L}$ refers to the fact that the loss is computed using a sum 
 Models trained with such an output activation and loss function will be denoted using the `S-' prefix in order to indicate they provide subjective predictions, e.g. S-GCN.
 \subsection{Dropout inference as a Bayesian approximation}
 \label{sec::dropout_bayesian}
-It has been shown that a model with dropout can be considered to represent the posterior distribution over models \cite{pmlr_v48_gal16}.
-The dropouts are used to represent stochasticity in the model parameters \cite{C9SC01992H}.
+It has been shown that a model with dropout can be considered to represent the posterior distribution over models \cite{Gal2016}.
+The dropouts are used to represent stochasticity in the model parameters \cite{Ryu2019}.
 A given combination of dropouts can be considered to represent a model sampled from the approximate posterior, $q(\boldsymbol{\theta})$, with the actual posterior distribution of models being $p(\boldsymbol{\theta}|\mathcal{D})$.
 Monte Carlo sampling can be used to approximately compute quantities such as the term $\mathbb{E}_{p\left(\boldsymbol{\theta}\vert \mathcal{D}\right)}\left[\mathcal{H}(p(y\vert x; \boldsymbol{\theta}))\right]$ in (\ref{eq::epistemic}) allowing the aleatoric and epistemic uncertainty to be calculated.
 This can be done using the approximation 
@@ -215,7 +215,7 @@ The Drop-GCN model, which is used for benchmarking the subjective methods, refer
 
 \subsection{Convergence assistance techniques}
 In order to assist the convergence of subjective models, two additional assistance techniques have been used: teacher knowledge distillation and the use of a Dirichlet prior.
-These methods have been shown to allow subjective models to provide better uncertainty estimates \cite{Zhao2020}.
+These methods have been shown to allow subjective models to provide better uncertainty estimates \cite{ZhaoXujiang2020}.
 \subsubsection{Teacher knowledge distillation}
 By training a non-subjective model in advance, its outputs, $\hat{p}_{ik}$, can be used in order to encourage the subjective model to converge to node Dirichlet distributions with $\mathbb{E}[p_{ik}]$ which are close to the teacher's deterministic estimates.
 This is achieved using an additional term in the loss function,
@@ -227,7 +227,7 @@ Notice that this sum is computed over all nodes as opposed to just the nodes in 
 Models trained using a teacher are denoted using the ``-T'' suffix e.g. a S-BGCN-T model would indicate that a pre-trained GCN was used as a teacher in order to assist the training convergence of a subjective graph convolutional model.
 \subsubsection{Dirichlet prior}
 A second convergence assistance technique which can be used involves the use of a Dirichlet prior, $\hat{\boldsymbol{\alpha}}$.
-The exact method chosen to provide $\hat{\boldsymbol{\alpha}}$ will depend on the nature of the problem but we will assume nodes which are nearby in the graph are more likely to belong to the same output class than nodes which are far apart, a property known as homophily \cite{huang2021combining}.
+The exact method chosen to provide $\hat{\boldsymbol{\alpha}}$ will depend on the nature of the problem but we will assume nodes which are nearby in the graph are more likely to belong to the same output class than nodes which are far apart, a property known as homophily \cite{HuangQian2019}.
 Using this assumption, we can use the computed distances on the graph in order to assign contributions of evidence from observed node labels to the other nodes in the graph using a function of our choosing.
 If $d_{ij}$ denotes the shortest path distance between a given node, indexed by $i$ and an observed node, indexed by $j$, then the amount of evidence contributed to suggest that the $\text{i}^\text{th}$ node belongs to the $\text{k}^\text{th}$ class is given by
 \begin{equation}
@@ -346,7 +346,7 @@ This method of assigning contiguous blocks into a split together as opposed to r
 \end{figure}
 
 \subsection{Network training and hyperparameters}
-Models were implemented and trained using the TensorFlow library \cite{tensorflow2015_whitepaper}.
+Models were implemented and trained using the TensorFlow library \cite{Abadi2015}.
 In order to handle the imbalance of classes in the dataset, sample weighting was used.
 Samples were given weights which were inversely proportional to the number of total samples of each class in the training set.
 These weights were used when computing the loss during training such that the loss related to nodes belonging to under-represented classes were given an increased influence over parameter updates and vice versa.
@@ -430,7 +430,7 @@ The performance seen for the S-BGCN-T-K model trained using the superpixel prior
 \subsection{Out of distribution detection}
 
 A lack of confidence held about the model's prediction might also arise if it receives an input which belongs to a distribution other than the distributions seen during training.
-The relative inability of neural networks' to successfully extrapolate beyond the support of the training data is a well-known weakness of these methods \cite{NIPS2017_9ef2ed4b}.
+The relative inability of neural networks' to successfully extrapolate beyond the support of the training data is a well-known weakness of these methods \cite{Lakshminarayanan2017}.
 By training models using only a subset of the classes provided by the GT, with the other classes acting as out of distribution (OOD) samples, an analysis of whether the uncertainty metrics are capable of distinguishing OOD nodes can be performed.
 Using the same approach as described for misclassification detection, the AUROC and AUPR can be calculated for each uncertainty output provided by each model type, in order to determine the relative performance of the respective metrics for this task.
 
