Fixed typo in .bib (Josan->Josang)

--- a/latex/CEUR/bibtex/bib/imrolland.bib
+++ b/latex/CEUR/bibtex/bib/imrolland.bib
@@ -21,7 +21,7 @@
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
-@INPROCEEDINGS{Josan2018,  
+@INPROCEEDINGS{Josang2018,  
   author={Josang, Audun and Cho, Jin-Hee and Chen, Feng},  
   booktitle={2018 21st Int. Conf. Inf. Fusion},   
   title={Uncertainty Characteristics of Subjective Opinions},   
